...

    LazyVerticalGrid(
        columns = GridCells.Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("FilmList")
    ) {
        items(updatedFavoriteFilm, key = { it.film.id }) { data ->
            MovieItem(
                image = data.film.image,
                title = data.film.title,
                genre = data.film.genre,
                synopsis = data.film.synopsis,
                isFavorite = data.isFavoriteFilm,
                favoriteToggle = {
                    viewModel.toggleFavorite(data)
                },
                modifier = Modifier.clickable {
                    navigateToDetail(data.film.id)
                }
            )
...
