...
                                isFavoriteState = !isFavoriteState
                                favoriteToggle()
                            },
                            modifier = Modifier
                                .padding(16.dp)
                                .semantics(mergeDescendants = true) {
                                    contentDescription = "Favorite Button"
                                }
                        )
                    }
                }
            }
        }
...
